# msci

./: .env.template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/workflows/: run-tests.yml
msci/: __init__.py  config.py  main.py  models.py  state.py  wiki_word_frequency.py
tests/: conftest.py  test_api.py  test_wiki.py
